# connectfour

./: README.md  main.py  pyproject.toml
documentation/: maarittelydokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md
src/: main.py  matrix.py  pyproject.toml
src/ui/: gameview.py
tiraconfig/: setup.sh
